--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# Workflow for analysis and fix dart code
 
 name: Analysis
 
@@ -27,6 +27,6 @@ jobs:
         run: flutter analyze --fatal-warnings --fatal-infos .
 
       - name: Run formatter
-        run: flutter format --set-exit-if-changed .
+        run: flutter format --fix .
         
 
